--- a/src/styles.css
+++ b/src/styles.css
@@ -66,6 +66,7 @@ font-weight: bold;
 .cartItem{
   height: 95px;
   background-color: #6FD9B5;
+  margin-bottom: 15px;
   padding: 10px 10px 10px 25px;
 }
 
@@ -83,23 +84,34 @@ font-weight: bold;
   font-size: x-large;
 }
 .countBtn{
+  /*width: 20px;
+  height: 17px;*/
+  font-size: large;
+  padding-top: 0px;
+  padding-bottom: 0px;
   border-color: transparent;
   border-style: none;
   background-color: white;
-  margin-left: 15px;
-  margin-right: 15px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 .bottomHalf{
   color: black;
 }
+.bottomHalf label{
+  font-size: small;
+  font-weight: 800;
+}
 .deleteBtn{
   border: 0;
   color: white;
+  float: right;
+  font-size: medium;
   background-color: transparent;
 }
 #mainContent{
   width: 1450px;
-  /*height: 1400px;*/
+  min-height: 800px;
   display: flex;
   margin: 0px 60px 0px 60px;
 }
@@ -108,7 +120,7 @@ font-weight: bold;
 }
 #shoppingCart{
   color: white;
-  width: 300px;
+  min-width: 350px;
   background-color: #32C996;
 }
 #shoppingHead{
@@ -126,8 +138,9 @@ font-weight: bold;
   font-size: 0.67em;
   font-weight: 100;
   border: none;
-  background-color: transparent;
   color: white;
+  margin: 0px;
+  background-color: transparent;
 }
 #purchaseBtn{
   width: 190px;
