--- a/src/styles.css
+++ b/src/styles.css
@@ -77,6 +77,8 @@ font-weight: bold;
   
 }
 .quantity{
+  position: relative;
+  bottom: 12px;
   display: inline-block;
 }
 .count{
@@ -145,11 +147,14 @@ font-weight: bold;
 #purchaseBtn{
   width: 190px;
   height: 40px;
-  font-size: larger;
   color: black;
-  background-color: #C0EFDF;
   border: none;
+  font-weight: 900;
+  font-size: medium;
+  margin-top: 15px;
+  margin-bottom: 25px;
   border-radius: 10px;
+  background-color: #C0EFDF;
 }
 #cartBottom{
   float: right;
