--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,7 @@
-body{
+body,html, #app,#layout{
   font-family: sans-serif;
   margin: 0px;
+  height: 100%;
 }
 img{
   max-width: 100%;
@@ -12,9 +13,11 @@ img{
   width: 210px;
   font-family: sans-serif;
   margin-bottom: 0px;
-  margin-left: calc(50% - 725px);
+  margin-top: 0px;                     /*I think the app looks better with a top margin*/
+  margin-left: calc(50% - 725px);       /*Math to calc where the tab should be. 725 is half the min width of the main content*/
   text-align: center;
 }
+/*If the screen is smaller than the the min width of the main content*/
 @media screen and (max-width: 1470px) {
   #tab{ 
     margin-left: 0px;
@@ -69,9 +72,10 @@ img{
   width: 190px;
   height: 40px;
   font-size: larger;
-  background-color: #32C996;
   border: none;
+  cursor: pointer;
   border-radius: 10px;
+  background-color: #32C996;
 }
 .cartItem{
   height: 85px;
@@ -100,6 +104,7 @@ img{
   padding-top: 0px;
   padding-bottom: 0px;
   border-color: transparent;
+  cursor: pointer;
   border-style: none;
   background-color: white;
   margin-left: 10px;
@@ -116,6 +121,7 @@ img{
   border: 0;
   color: white;
   float: right;
+  cursor: pointer;
   font-size: medium;
   background-color: transparent;
 }
@@ -123,14 +129,15 @@ img{
   width: 50%;
   margin: 0 auto;
   min-width: 1450px;
-  min-height: 800px;
+  height: 100%;
   display: flex;
 }
 #shop{
-  
+  height: 100%;
 }
 #shoppingCart{
   color: white;
+  height: 100%;
   min-width: 350px;
   background-color: #32C996;
 }
@@ -152,6 +159,7 @@ img{
   color: white;
   margin: 0px;
   padding: 0;
+  cursor: pointer;
   background-color: transparent;
 }
 #purchaseBtn{
@@ -159,6 +167,7 @@ img{
   height: 40px;
   color: black;
   border: none;
+  cursor: pointer;
   font-weight: 900;
   font-size: medium;
   margin-top: 15px;
@@ -177,4 +186,5 @@ img{
 #container{
   border-top: 5px solid #32C996;
   width: 100%;
+  height: calc(100% - 42px);        /*42 is the size of the tab and border*/
 }
