Added CSS in JS via react-csjs

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,4 @@
-body,html, #app,#layout{
+body,html, #app, .layout{
   font-family: sans-serif;
   margin: 0px;
   height: 100%;
@@ -6,184 +6,4 @@ body,html, #app,#layout{
 img{
   max-width: 100%;
   height: auto;
-}
-#tab{
-  background-color: #32C996;
-  color: white;
-  width: 210px;
-  font-family: sans-serif;
-  margin-bottom: 0px;
-  margin-left: calc(50% - 725px);       /*Math to calc where the tab should be. 725 is half the min width of the main content*/
-  text-align: center;
-}
-/*If the screen is smaller than the the min width of the main content*/
-@media screen and (max-width: 1470px) {
-  #tab{ 
-    margin-left: 0px;
-  }
-}
-#cartHeadLabel{
-  margin-bottom: 0px;
-  font-weight: 900;
-}
-#cartCount{
-  margin: 0px 0px 5px 0px;
-  font-weight: 100;
-}
-#shortLine{
-  border: 0;
-  height: 2px;
-  background: white;
-  margin-left: 30px;
-}
-.ShopItem{
-  display: inline-block;
-  width: 250px;
-  height: 340px;
-  border: 1px solid #32C996;
-  text-align: center;
-  margin: 20px 20px 0px 0px;
-}
-.ShopItem img{
-  height: 170px;
-  width: 220px;
-}
-.fruitName{
- display: block;
- font-weight: bold;
- font-size: larger;
- overflow: hidden;
- white-space: nowrap;
- text-overflow: ellipsis;
- text-transform: capitalize;
-}
-.price{
-  font-size: -webkit-xxx-large;
-}
-.stock{
-  font-size: larger;
-}
-.inStock{
-  margin: 10px 0px 10px 0px;
-  font-weight: 500;
-}
-.addToCartBtn{
-  width: 190px;
-  height: 40px;
-  font-size: larger;
-  border: none;
-  cursor: pointer;
-  border-radius: 10px;
-  background-color: #32C996;
-}
-.cartItem{
-  height: 85px;
-  background-color: #6FD9B5;
-  margin-bottom: 15px;
-  padding: 10px 10px 10px 25px;
-}
-
-.cartItem img{
-  width: 80px;
-  height: 60px;
-  display: inline-block;
-  
-}
-.quantity{
-  position: relative;
-  bottom: 12px;
-  display: inline-block;
-}
-.count{
-  color: black;
-  font-size: x-large;
-}
-.countBtn{
-  font-size: large;
-  padding-top: 0px;
-  padding-bottom: 0px;
-  border-color: transparent;
-  cursor: pointer;
-  border-style: none;
-  background-color: white;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-.bottomHalf{
-  color: black;
-}
-.bottomHalf label{
-  font-size: small;
-  font-weight: 800;
-}
-.deleteBtn{
-  border: 0;
-  color: white;
-  float: right;
-  cursor: pointer;
-  font-size: medium;
-  background-color: transparent;
-}
-#mainContent{
-  width: 50%;
-  margin: 0 auto;
-  min-width: 1450px;
-  height: 100%;
-  display: flex;
-}
-#shop{
-  height: 100%;
-}
-#shoppingCart{
-  color: white;
-  height: 100%;
-  min-width: 350px;
-  background-color: #32C996;
-}
-#shoppingHead{
-  text-align: center;
-}
-#total{
-  margin: 0px;
-  display: block;
-  text-align: right;
-  font-weight: 900;
-  font-size: 0.90em;
-}
-#emptyCartBtn{
-  display: block;
-  font-size: 0.67em;
-  font-weight: 100;
-  border: none;
-  color: white;
-  margin: 0px;
-  padding: 0;
-  cursor: pointer;
-  background-color: transparent;
-}
-#purchaseBtn{
-  width: 190px;
-  height: 40px;
-  color: black;
-  border: none;
-  cursor: pointer;
-  font-weight: 900;
-  font-size: medium;
-  margin-top: 15px;
-  margin-bottom: 25px;
-  border-radius: 10px;
-  background-color: #C0EFDF;
-}
-#cartBottom{
-  float: right;
-  margin-right: 15px;
-}
-#cartBottom > * {
-  float: right;
-  clear: right;
-}
-#container{
-  border-top: 5px solid #32C996;
-  width: 100%;
-  height: calc(100% - 42px);        /*42 is the size of the tab and border*/
 }
